added private and long fix.